Atualiza cores do tema para violeta e altera nome exibido para "Augusto"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Toggle Theme Button -->
     <button
       id="themeToggle"
-      class="fixed top-4 right-4 z-50 p-3 rounded-full bg-blue-600 hover:bg-blue-700 text-white shadow-lg transition-all duration-300 hover:scale-110"
+      class="fixed top-4 right-4 z-50 p-3 rounded-full bg-violet-600 hover:bg-violet-700 text-white shadow-lg transition-all duration-300 hover:scale-110"
     >
       <svg
         id="sunIcon"
@@ -73,7 +73,7 @@
           class="bg-white dark:bg-slate-800 rounded-2xl shadow-xl overflow-hidden mb-8 transform transition-all duration-300 hover:shadow-2xl"
         >
           <div
-            class="bg-gradient-to-r from-blue-600 to-blue-800 dark:from-blue-700 dark:to-blue-900 px-8 py-12 sm:px-12"
+            class="bg-gradient-to-r from-violet-600 to-violet-800 dark:from-violet-700 dark:to-violet-900 px-8 py-12 sm:px-12"
           >
             <div class="flex flex-col sm:flex-row items-center gap-8">
               <!-- Foto -->
@@ -88,9 +88,9 @@
               <!-- Informações Principais -->
               <div class="flex-1 text-center sm:text-left">
                 <h1 class="text-4xl sm:text-5xl font-bold text-white mb-2">
-                  Bom dia
+                  Augusto
                 </h1>
-                <p class="text-xl text-blue-100 mb-6">Sua Profissão</p>
+                <p class="text-xl text-violet-100 mb-6">Sua Profissão</p>
 
                 <!-- Contatos -->
                 <div class="flex flex-col sm:flex-row gap-4 text-white">
@@ -112,7 +112,7 @@
                     </svg>
                     <a
                       href="mailto:seu.email@exemplo.com"
-                      class="hover:text-blue-200 transition-colors"
+                      class="hover:text-violet-200 transition-colors"
                       >seu.email@exemplo.com</a
                     >
                   </div>
@@ -134,7 +134,7 @@
                     </svg>
                     <a
                       href="tel:+5511999999999"
-                      class="hover:text-blue-200 transition-colors"
+                      class="hover:text-violet-200 transition-colors"
                       >(11) 99999-9999</a
                     >
                   </div>
@@ -153,7 +153,7 @@
                     <a
                       href="https://www.linkedin.com/in/seu-perfil"
                       target="_blank"
-                      class="hover:text-blue-200 transition-colors"
+                      class="hover:text-violet-200 transition-colors"
                       >linkedin.com/in/seu-perfil</a
                     >
                   </div>
@@ -171,7 +171,7 @@
             class="text-3xl font-bold text-slate-800 dark:text-white mb-4 flex items-center gap-3"
           >
             <svg
-              class="w-8 h-8 text-blue-600 dark:text-blue-400"
+              class="w-8 h-8 text-violet-600 dark:text-violet-400"
               fill="none"
               stroke="currentColor"
               viewBox="0 0 24 24"
@@ -200,7 +200,7 @@
             class="text-3xl font-bold text-slate-800 dark:text-white mb-6 flex items-center gap-3"
           >
             <svg
-              class="w-8 h-8 text-blue-600 dark:text-blue-400"
+              class="w-8 h-8 text-violet-600 dark:text-violet-400"
               fill="none"
               stroke="currentColor"
               viewBox="0 0 24 24"
@@ -218,15 +218,17 @@
           <div class="space-y-6">
             <!-- Experiência 1 -->
             <div
-              class="border-l-4 border-blue-600 dark:border-blue-400 pl-6 pb-6 relative"
+              class="border-l-4 border-violet-600 dark:border-violet-400 pl-6 pb-6 relative"
             >
               <div
-                class="absolute w-4 h-4 bg-blue-600 dark:bg-blue-400 rounded-full -left-[10px] top-0"
+                class="absolute w-4 h-4 bg-violet-600 dark:bg-violet-400 rounded-full -left-[10px] top-0"
               ></div>
               <h3 class="text-xl font-bold text-slate-800 dark:text-white">
                 Cargo Atual
               </h3>
-              <p class="text-blue-600 dark:text-blue-400 font-semibold mb-1">
+              <p
+                class="text-violet-600 dark:text-violet-400 font-semibold mb-1"
+              >
                 Empresa Atual
               </p>
               <p class="text-slate-500 dark:text-slate-400 text-sm mb-3">
@@ -251,7 +253,9 @@
               <h3 class="text-xl font-bold text-slate-800 dark:text-white">
                 Cargo Anterior
               </h3>
-              <p class="text-blue-600 dark:text-blue-400 font-semibold mb-1">
+              <p
+                class="text-violet-600 dark:text-violet-400 font-semibold mb-1"
+              >
                 Empresa Anterior
               </p>
               <p class="text-slate-500 dark:text-slate-400 text-sm mb-3">
@@ -276,7 +280,9 @@
               <h3 class="text-xl font-bold text-slate-800 dark:text-white">
                 Primeiro Cargo
               </h3>
-              <p class="text-blue-600 dark:text-blue-400 font-semibold mb-1">
+              <p
+                class="text-violet-600 dark:text-violet-400 font-semibold mb-1"
+              >
                 Primeira Empresa
               </p>
               <p class="text-slate-500 dark:text-slate-400 text-sm mb-3">
@@ -301,7 +307,7 @@
             class="text-3xl font-bold text-slate-800 dark:text-white mb-6 flex items-center gap-3"
           >
             <svg
-              class="w-8 h-8 text-blue-600 dark:text-blue-400"
+              class="w-8 h-8 text-violet-600 dark:text-violet-400"
               fill="none"
               stroke="currentColor"
               viewBox="0 0 24 24"
@@ -329,11 +335,13 @@
           </h2>
 
           <div class="space-y-4">
-            <div class="border-l-4 border-blue-600 dark:border-blue-400 pl-6">
+            <div
+              class="border-l-4 border-violet-600 dark:border-violet-400 pl-6"
+            >
               <h3 class="text-xl font-bold text-slate-800 dark:text-white">
                 Grau de Formação
               </h3>
-              <p class="text-blue-600 dark:text-blue-400 font-semibold">
+              <p class="text-violet-600 dark:text-violet-400 font-semibold">
                 Instituição de Ensino
               </p>
               <p class="text-slate-500 dark:text-slate-400 text-sm">
@@ -351,7 +359,7 @@
             class="text-3xl font-bold text-slate-800 dark:text-white mb-6 flex items-center gap-3"
           >
             <svg
-              class="w-8 h-8 text-blue-600 dark:text-blue-400"
+              class="w-8 h-8 text-violet-600 dark:text-violet-400"
               fill="none"
               stroke="currentColor"
               viewBox="0 0 24 24"
@@ -368,35 +376,35 @@
 
           <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3">
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >HTML/CSS</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >JavaScript</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >React</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >Node.js</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >Python</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >Git</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >SQL</span
             >
             <span
-              class="px-4 py-2 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
+              class="px-4 py-2 bg-violet-100 dark:bg-violet-900 text-violet-800 dark:text-violet-200 rounded-lg text-center font-medium hover:scale-105 transition-transform"
               >APIs REST</span
             >
           </div>
@@ -410,7 +418,7 @@
             class="text-3xl font-bold text-slate-800 dark:text-white mb-6 flex items-center gap-3"
           >
             <svg
-              class="w-8 h-8 text-blue-600 dark:text-blue-400"
+              class="w-8 h-8 text-violet-600 dark:text-violet-400"
               fill="none"
               stroke="currentColor"
               viewBox="0 0 24 24"
